# adhole

./: .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  bazel-adhole  bazel-bin  bazel-out  bazel-testlogs  meson.build
config/: blocklist.txt  config.conf
include/: blocklist.h  config.h  dns_server.h  dns_string.h  dns_types.h  logger.h
src/: blocklist.c  config.c  dns_server.c  dns_string.c  dns_types.h  logger.c  main.c
